@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.1-3
-Date: 2014/10/06
+Date: 2014/10/07
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
